--- a/my-app/src/components/Main/Main.css
+++ b/my-app/src/components/Main/Main.css
@@ -23,7 +23,7 @@
   margin-left: 67px;
 }
 
-.sortPizzas {
+.sortOfPizzas {
   margin-right: 50px;
   font-weight: 700;
   font-size: 14px;
@@ -36,23 +36,24 @@
   border-bottom: 1px dotted #fe5f1e;
 }
 
-.typeListItem {
+/* .typeListButton {
   height: 46px;
   width: 100%;
-  border-radius: 7%;
+  border-radius: 30px;
   background-color: #3c39394a;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+  border: none;
 
-.typeListItemText {
   padding-left: 16px;
   padding-right: 16px;
   font-weight: 700;
   font-size: 16px;
   color: #2c2c2c;
-}
+} */
+
+
 
 .title {
   margin-left: 67px;
@@ -66,7 +67,6 @@
 .pizzaInfoContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .pizzaInfoItem {
@@ -111,7 +111,7 @@
   font-size: 14px;
   line-height: 19px;
   color: #ffffff;
-    transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease;
+  transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease;
 }
 
 .addPizza:hover,
@@ -119,7 +119,6 @@
   background-color: #ff772e;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
 }
-
 
 .sizesContainer {
   margin-bottom: 6px;
